# avemu

./: AGENTS.md  Dockerfile  LICENSE  README.md  avemu.py  pyproject.toml  requirements.txt
.beads/: issues.jsonl
demo/: avemu-cli.tape  avemu-tui.tape  send_demo_cmds.py  test_client.sh
tests/: __init__.py  conftest.py  test_emulator.py  test_protocol_health.py
