[project]
name = "avemu"
version = "0.1.0"
description = "TCP-based test emulator for A/V equipment RS232 control"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Ryan Snodgrass", email = "rsnodgrass@gmail.com" }
]
keywords = ["av", "audio", "video", "emulator", "testing", "rs232", "serial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "coloredlogs>=15.0",
    "pyavcontrol>=2.0.0",
    "rich>=13.0",
]

[project.scripts]
avemu = "avemu:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Repository = "https://github.com/rsnodgrass/avemu"
Issues = "https://github.com/rsnodgrass/avemu/issues"

[tool.uv.sources]
pyavcontrol = { path = "../avcontrol", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["avemu.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"
force_to_top = [ "logging" ]
balanced_wrapping = true

[tool.black]
line-length = 90

[tool.pycln]
all = true

[tool.refurb]
quiet = true
ignore = []

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.FORMAT]
expected-line-ending-format = "LF"

[tool.pylint.CODE_STYLE]
max-line-length-suggestions = 90
